[package]
name = "opentelemetry-stackdriver"
version = "0.14.0"
description = "A Rust opentelemetry exporter that uploads traces to Google Stackdriver trace."
documentation = "https://docs.rs/opentelemetry-stackdriver/"
repository = "https://github.com/open-telemetry/opentelemetry-rust"
license = "Apache-2.0"
edition = "2018"
exclude = ["/proto"]

[dependencies]
async-trait = "0.1.48"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
gcp_auth = { version = "0.7", optional = true }
hex = "0.4"
http = "0.2"
hyper = "0.14.2"
hyper-rustls = { version = "0.23", optional = true }
opentelemetry = { version = "0.17", path = "../opentelemetry" }
opentelemetry-semantic-conventions = { version = "0.9", path = "../opentelemetry-semantic-conventions" }
prost = "0.10.4"
prost-types = "0.10.1"
thiserror = "1.0.30"
tonic = { version = "0.7.2", features = ["tls", "transport"] }
yup-oauth2 = { version = "7.0.1", optional = true }

[features]
default = ["yup-authorizer", "tls-native-roots"]
yup-authorizer = ["hyper-rustls", "yup-oauth2"]
tls-native-roots = ["tonic/tls-roots"]
tls-webpki-roots = ["tonic/tls-webpki-roots"]

[dev-dependencies]
reqwest = "0.11.9"
tempfile = "3.3.0"
tokio = "1"
tonic-build = "0.7.2"
walkdir = "2.3.2"
