[package]
name = "opentelemetry-stackdriver"
version = "0.18.0"
description = "A Rust opentelemetry exporter that uploads traces to Google Stackdriver trace."
documentation = "https://docs.rs/opentelemetry-stackdriver/"
repository = "https://github.com/open-telemetry/opentelemetry-rust"
license = "Apache-2.0"
edition = "2021"
exclude = ["/proto"]
rust-version = "1.64"

[dependencies]
async-trait = "0.1.48"
gcp_auth = { version = "0.9", optional = true }
hex = "0.4"
http = "0.2"
hyper = "0.14.2"
hyper-rustls = { version = "0.24", optional = true }
opentelemetry = { version = "0.21", path = "../opentelemetry" }
opentelemetry_sdk = { version = "0.20", path = "../opentelemetry-sdk" }
opentelemetry-semantic-conventions = { version = "0.12", path = "../opentelemetry-semantic-conventions" }
prost = "0.12"
prost-types = "0.12"
thiserror = "1.0.30"
tonic = { version = "0.10", features = ["gzip", "tls", "transport"] }
yup-oauth2 = { version = "8.1.0", optional = true }

# Futures
futures-core = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["alloc"] }
futures-channel = { version = "0.3", default-features = false, features = ["std"] }

[features]
default = ["yup-authorizer", "tls-native-roots"]
yup-authorizer = ["hyper-rustls", "yup-oauth2"]
tls-native-roots = ["tonic/tls-roots"]
tls-webpki-roots = ["tonic/tls-webpki-roots"]

[dev-dependencies]
reqwest = "0.11.9"
tempfile = "3.3.0"
tokio = "1"
tonic-build = "0.10"
walkdir = "2.3.2"
futures-util = {version = "0.3", default-features = false }
