[package]
name = "opentelemetry-stdout"
version = "0.31.0"
description = "An OpenTelemetry exporter for stdout"
homepage = "https://github.com/open-telemetry/opentelemetry-rust/tree/main/opentelemetry-stdout"
repository = "https://github.com/open-telemetry/opentelemetry-rust/tree/main/opentelemetry-stdout"
readme = "README.md"
categories = [
    "development-tools::debugging",
    "development-tools::profiling",
    "asynchronous",
]
keywords = ["opentelemetry", "tracing", "metrics", "logs"]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.75.0"
autobenches = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["trace", "metrics", "logs"]
trace = ["opentelemetry/trace", "opentelemetry_sdk/trace"]
metrics = ["opentelemetry/metrics", "opentelemetry_sdk/metrics"]
logs = ["opentelemetry/logs", "opentelemetry_sdk/logs", "opentelemetry_sdk/spec_unstable_logs_enabled"]

[dependencies]
chrono = { workspace = true, features = ["now"] }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }

[dev-dependencies]
opentelemetry-appender-tracing = { workspace = true }
tracing = { workspace = true, features = ["std"]}
tracing-subscriber = { workspace = true, features = ["registry", "std"] }
tokio = { workspace = true, features = ["full"] }
once_cell = { workspace = true }

[lints]
workspace = true

[lib]
bench = false
