[package]
name = "opentelemetry-user-events-logs"
description = "OpenTelemetry-Rust exporter to userevents"
version = "0.1.0"
edition = "2021"
homepage = "https://github.com/open-telemetry/opentelemetry-rust/tree/main/opentelemetry-user-events-logs"
repository = "https://github.com/open-telemetry/opentelemetry-rust/tree/main/opentelemetry-user-events-logs"
readme = "README.md"
rust-version = "1.68.0"
keywords = ["opentelemetry", "log", "trace", "user_events"]
license = "Apache-2.0"

[dependencies]
eventheader = "0.3.2"
eventheader_dynamic = "0.3.2"
opentelemetry_api = { version = "0.19", path = "../opentelemetry-api", features = ["logs"] }
opentelemetry_sdk = { version = "0.19", path = "../opentelemetry-sdk", features = ["logs"] }
async-std = { version="1.6" }
async-trait = { version="0.1" }
chrono = { version="0.4", default-features = false, features=["std"] }

[dev-dependencies]
opentelemetry-appender-tracing = { path = "../opentelemetry-appender-tracing" }
tracing = { version = "0.1.37", default-features = false, features = ["std"] }
tracing-core = "0.1.31"
tracing-subscriber = { version = "0.3.0", default-features = false, features = ["registry", "std"] }
microbench = "0.5"

[features]
logs_level_enabled = ["opentelemetry_api/logs_level_enabled", "opentelemetry_sdk/logs_level_enabled"]
default=["logs_level_enabled"]

[[example]]
name = "basic"
path = "examples/basic.rs"  