[package]
name = "opentelemetry-zipkin"
version = "0.31.0"
description = "Zipkin exporter for OpenTelemetry"
homepage = "https://github.com/open-telemetry/opentelemetry-rust/tree/main/opentelemetry-zipkin"
repository = "https://github.com/open-telemetry/opentelemetry-rust/tree/main/opentelemetry-zipkin"
readme = "README.md"
categories = [
    "development-tools::debugging",
    "development-tools::profiling",
    "asynchronous",
]
keywords = ["opentelemetry", "zipkin", "tracing", "async"]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.75.0"
autobenches = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["reqwest-blocking-client", "reqwest/native-tls"]
reqwest-blocking-client = ["reqwest/blocking", "opentelemetry-http/reqwest-blocking"]
reqwest-client = ["reqwest", "opentelemetry-http/reqwest"]
reqwest-rustls = ["reqwest", "reqwest/rustls-tls-native-roots"]

[dependencies]
once_cell = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true, features = ["trace"] }
opentelemetry-http = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }
typed-builder = { workspace = true }
http = { workspace = true }
reqwest = { workspace = true, optional = true }
thiserror = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
bytes = { workspace = true }
futures-util = { workspace = true, features = ["io"] }
http-body-util = { workspace = true }
hyper-util = { workspace = true, features = ["client-legacy", "http1", "tokio"] }
opentelemetry_sdk = { workspace = true, features = ["trace", "testing"] }
temp-env = { workspace = true }

[lints]
workspace = true

[lib]
bench = false
