[package]
name = "opentelemetry-zpages"
version = "0.3.0"
description = "ZPages implementation for OpenTelemetry"
homepage = "https://github.com/open-telemetry/opentelemetry-rust/tree/master/opentelemetry-zpages"
repository = "https://github.com/open-telemetry/opentelemetry-rust/tree/master/opentelemetry-zpages"
readme = "README.md"
categories = [
    "development-tools::debugging",
    "development-tools::profiling",
    "asynchronous",
]
keywords = ["opentelemetry", "zipkin", "tracing", "async"]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.56"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
opentelemetry = { version = "0.18.0", path = "../opentelemetry", default-features = false, features = ["trace"] }
opentelemetry-proto = { version = "0.1", path = "../opentelemetry-proto", features = ["with-serde", "zpages", "gen-protoc"], default-features = false }
async-channel = "1.6"
futures-channel = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
serde = "1.0"
serde_json = "1.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt"] }
opentelemetry = { path = "../opentelemetry", features = ["trace", "testing"] }
