[package]
name = "opentelemetry-zpages"
version = "0.5.0"
description = "ZPages implementation for OpenTelemetry"
homepage = "https://github.com/open-telemetry/opentelemetry-rust/tree/master/opentelemetry-zpages"
repository = "https://github.com/open-telemetry/opentelemetry-rust/tree/master/opentelemetry-zpages"
readme = "README.md"
categories = [
    "development-tools::debugging",
    "development-tools::profiling",
    "asynchronous",
]
keywords = ["opentelemetry", "zipkin", "tracing", "async"]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.64"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
opentelemetry = { path = "../opentelemetry" }
opentelemetry_sdk = { path = "../opentelemetry-sdk", default-features = false, features = ["trace"] }
opentelemetry-proto = { path = "../opentelemetry-proto", features = ["zpages", "gen-tonic", "with-serde"], default-features = false }
async-channel = "1.6"
futures-channel = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
serde = "1.0"
serde_json = "1.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt"] }
opentelemetry_sdk = { path = "../opentelemetry-sdk", features = ["trace", "testing"] }
rand = "0.8"
hyper = { version = "0.14", features = ["full"] }

[[example]]
name = "zpages"
path = "examples/zpages.rs"
