[package]
name = "opentelemetry"
version = "0.22.0"
description = "OpenTelemetry API for Rust"
homepage = "https://github.com/open-telemetry/opentelemetry-rust"
repository = "https://github.com/open-telemetry/opentelemetry-rust"
readme = "README.md"
categories = [
    "development-tools::debugging",
    "development-tools::profiling",
    "api-bindings",
    "asynchronous",
]
keywords = ["opentelemetry", "logging", "tracing", "metrics", "async"]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.65"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
futures-core = { workspace = true }
futures-sink = "0.3"
once_cell = { workspace = true }
opentelemetry-derive = { version = "0.22", path = "../opentelemetry-derive", optional = true }
pin-project-lite = { workspace = true, optional = true }
thiserror = { workspace = true }

[target.'cfg(all(target_arch = "wasm32", not(target_os = "wasi")))'.dependencies]
js-sys = "0.3.63"

[features]
default = ["trace"]
trace = ["pin-project-lite"]
metrics = []
testing = ["trace", "metrics"]
logs = []
logs_level_enabled = ["logs"]
derive = ["dep:opentelemetry-derive"]
otel_unstable = []

[dev-dependencies]
opentelemetry_sdk = { path = "../opentelemetry-sdk" } # for documentation tests
criterion = { version = "0.3" }

[[bench]]
name = "metrics"
harness = false
required-features = ["metrics"]

[[bench]]
name = "attributes"
harness = false
