[package]
name = "stress"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]] # Bin to run the metrics stress tests
name = "metrics"
path = "src/metrics.rs"
doc = false

[[bin]] # Bin to run the logs stress tests
name = "logs"
path = "src/logs.rs"
doc = false

[[bin]] # Bin to run the traces stress tests
name = "traces"
path = "src/traces.rs"
doc = false

[dependencies]
ctrlc = "3.2.5"
lazy_static = "1.4.0"
num_cpus = "1.15.0"
opentelemetry = { path = "../opentelemetry", features = ["metrics", "logs", "trace"] }
opentelemetry_sdk = { path = "../opentelemetry-sdk", features = ["metrics", "logs", "trace"] }
opentelemetry-appender-tracing = { path = "../opentelemetry-appender-tracing"}
rand = { version = "0.8.4", features = ["small_rng"] }
tracing = { workspace = true, features = ["std"]}
tracing-core = { workspace = true }
tracing-subscriber = { workspace = true, features = ["registry", "std"] }
num-format = "0.4.4"
