[package]
name = "actix-http-tracing"
version = "0.1.0"
edition = "2018"
publish = false

[dependencies]
actix-web = "3.2"
actix-web-opentelemetry = { version = "0.9", features = ["metrics"] }
opentelemetry = { version = "0.11", features = ["metrics", "tokio"] }
opentelemetry-jaeger = { version = "0.10", features = ["tokio"] }
opentelemetry-prometheus = "0.4"
tracing = "0.1"
tracing-opentelemetry = "0.10"
tracing-subscriber = "0.2"
