[package]
name = "actix-http-tracing"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
actix-web = "4.1"
actix-web-opentelemetry = { version = "0.12", features = ["metrics"] }
opentelemetry = { version = "0.17", features = ["metrics", "tokio"] }
opentelemetry-jaeger = { version = "0.16", features = ["tokio"] }
opentelemetry-prometheus = "0.10"
tracing = "0.1"
tracing-opentelemetry = "0.17"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
