[package]
name = "actix-http-tracing"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
actix-web = "4.1"
actix-web-opentelemetry = { version = "0.13", features = ["metrics", "metrics-prometheus"] }
opentelemetry = { version = "0.18", features = ["metrics", "rt-tokio"] }
opentelemetry-jaeger = { version = "0.17", features = ["rt-tokio"] }
opentelemetry-prometheus = "0.11"
tracing = "0.1"
tracing-opentelemetry = "0.18"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
